--- a/login.html
+++ b/login.html
@@ -251,6 +251,11 @@
                             </svg>
                         </button>
                     </div>
+                    <p id="login-error-msg"
+                        style="color: red; font-size: 0.85rem; display: none; margin-bottom: 0.5rem; text-align:center;">
+                        Invalid username or password.
+                    </p>
+
                     <button type="button" class="submit-btn" onclick="validateUser()">Log In</button>
                 </form>
             </div>
@@ -298,18 +303,16 @@
                 },
                 body: JSON.stringify(user),
             }
-            const api = "https://psinventory-v2.onrender.com";
-            // const api = "http://localhost:8080"; // Use this for local development
+            // const api = "https://psinventory-v2.onrender.com";
+            const api = "http://localhost:8080"; // Use this for local development
 
             fetch(`${api}/user/session/init`, requestOptions)
                 .then(response => response.json())
                 .then(data => {
                     console.log("resp : ", data)
                     if (data.error === true) {
-                        Swal.fire({
-                            html: `<p style="color:#008080; font-size:14px; font-family: 'Inter', sans-serif;">${data.message.split(' ').map(word => word.charAt(0).toUpperCase() + word.slice(1)).join(' ')}</p>`,
-                            icon: "question"
-                        });
+                        document.getElementById('login-error-msg').style.display = 'block';
+                        document.getElementById('login-error-msg').innerText = data.message;
                     } else {
                         localStorage.setItem("psitoken", data.token);
                         localStorage.setItem("psiuser", data.user.username);
