--- a/purchase.html
+++ b/purchase.html
@@ -558,7 +558,16 @@
           });
 
           // Initialize fetch promises
-          const fetchSuppliers = fetch('https://psinventory-v2.onrender.com/admin/mis/supplier/view/active', { method: "post" })
+          const requestOptions = {
+            method: "POST",
+            headers: {
+              'Accept': 'application/json',
+              'Content-Type': 'application/json',
+              'Authorization': 'Bearer ' + localStorage.getItem('token')
+            },
+          }
+
+          const fetchSuppliers = fetch(api+'/admin/mis/supplier/view/active', requestOptions)
             .then(response => response.json())
             .then(function (responseData) {
               suppliers = responseData.suppliers || [];
@@ -567,7 +576,7 @@
               console.error('Error fetching suppliers data:', error);
             });
 
-          const fetchHeadAccounts = fetch('https://psinventory-v2.onrender.com/admin/accounts/get-cash-bank-accounts', { method: "post" })
+          const fetchHeadAccounts = fetch(api+'/admin/accounts/get-cash-bank-accounts', requestOptions)
             .then(response => response.json())
             .then(function (responseData) {
               headAccounts = responseData.head_accounts || [];
@@ -576,7 +585,7 @@
               console.error('Error fetching head accounts data:', error);
             });
 
-          const fetchCategories = fetch('https://psinventory-v2.onrender.com/admin/inventory/category/list/active', { method: "post" })
+          const fetchCategories = fetch(api+'/admin/inventory/category/list/active', requestOptions)
             .then(response => response.json())
             .then(function (responseData) {
               categories = responseData.categories || [];
@@ -585,7 +594,7 @@
               console.error('Error fetching categories data:', error);
             });
 
-          const fetchProducts = fetch('https://psinventory-v2.onrender.com/admin/inventory/products/active', { method: "post" })
+          const fetchProducts = fetch(api+'/admin/inventory/products/active', requestOptions)
             .then(response => response.json())
             .then(function (responseData) {
               products = responseData.products || [];
@@ -595,7 +604,7 @@
               console.error('Error fetching products data:', error);
             });
 
-          const fetchBrands = fetch('https://psinventory-v2.onrender.com/admin/inventory/brand/list/active', { method: "post" })
+          const fetchBrands = fetch(api+'/admin/inventory/brand/list/active', requestOptions)
             .then(response => response.json())
             .then(function (responseData) {
               brands = responseData.brands || [];
@@ -1057,10 +1066,14 @@
 
           const requestOptions = {
             method: "POST",
-            headers: { "Content-Type": "application/json" },
+            headers: {
+              'Accept': 'application/json',
+              'Content-Type': 'application/json',
+              'Authorization': 'Bearer ' + localStorage.getItem('token')
+            },
             body: JSON.stringify(payload)
           };
-          fetch('https://psinventory-v2.onrender.com/admin/inventory/transaction/get-list', requestOptions)
+          fetch(api+'/admin/inventory/transaction/get-list', requestOptions)
             .then(response => response.json())
             .then(data => {
               console.log(data.result)
@@ -1112,10 +1125,11 @@
             headers: {
               'Accept': 'application/json',
               'Content-Type': 'application/json',
+              'Authorization': 'Bearer ' + localStorage.getItem('token')
             },
             body: JSON.stringify(reqBody),
           }
-          fetch('https://psinventory-v2.onrender.com/admin/inventory/products/purchase', requestOptions)
+          fetch(api+'/admin/inventory/products/purchase', requestOptions)
             .then(response => response.json())
             .then(data => {
               console.log("purchase response:", data)
