--- a/receive-collection.html
+++ b/receive-collection.html
@@ -333,9 +333,14 @@
         initSingleDatePicker('#transaction_date')
         // fetch-1: On load window Get accounts for destination and customers who have due amount
         const requestOptions = {
-          method: 'post'
+          method: 'post',
+          headers: {
+            'Accept': 'application/json',
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + localStorage.getItem('token')
+          },
         }
-        fetch('https://psinventory-v2.onrender.com/admin/accounts/receive-collection/get-page-details', requestOptions)
+        fetch(api+'/admin/accounts/receive-collection/get-page-details', requestOptions)
           .then(response => response.json())
           .then(data => {
             if (data.error === true) {
@@ -486,11 +491,12 @@
           headers: {
             'Accept': 'application/json',
             'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + localStorage.getItem('token')
           },
           body: JSON.stringify(reception_summary),
         }
         console.log(reception_summary)
-        fetch('https://psinventory-v2.onrender.com/admin/accounts/receive-collection/complete-submission', requestOptions)
+        fetch(api+'/admin/accounts/receive-collection/complete-submission', requestOptions)
           .then(response => response.json())
           .then(data => {
             console.log("resp : ", data)
