--- a/ledger-book-details.html
+++ b/ledger-book-details.html
@@ -333,7 +333,15 @@
         link = "https://psinventory-v2.onrender.com/admin/hr/employee/view/all";
       }
       // fetch-1: On changes account type fetch head_accounts details list 
-      fetch(link, { method: 'POST' })
+      const requestOptions = {
+        method: 'POST',
+        headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer ' + localStorage.getItem('token'),
+        },
+      };
+      fetch(link, requestOptions)
         .then(response => response.json())
         .then(data => {
           console.log(data)
@@ -454,7 +462,8 @@
               method: 'POST',
               headers: {
                 'Accept': 'application/json',
-                'Content-Type': 'application/json'
+                'Content-Type': 'application/json',
+                'Authorization': 'Bearer ' + localStorage.getItem('token'),
               },
               body: JSON.stringify({
                 account_type: acc_type,
@@ -462,7 +471,7 @@
               })
             };
 
-            fetch('https://psinventory-v2.onrender.com/admin/reports/accounts/ledger-book/details', requestOptions)
+            fetch(api+'/admin/reports/accounts/ledger-book/details', requestOptions)
               .then(response => response.json())
               .then(responseData => {
                 console.log("Data fetched successfully:", responseData);
