--- a/service-in-progress.html
+++ b/service-in-progress.html
@@ -261,9 +261,14 @@
     window.addEventListener("DOMContentLoaded", () => {
       // Fetch all data once and let DataTables handle searching/pagination on client side
       const requestOptions = {
-        method: 'post'
+        method: 'post',
+        headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer ' + localStorage.getItem('token')
+        },
       }
-      fetch('https://psinventory-v2.onrender.com/admin/inventory/services/purchase/history?status=1', requestOptions)
+      fetch(api+'/admin/inventory/services/purchase/history?status=1', requestOptions)
         .then(response => response.json())
         .then(function (responseData) {
           purchaseHistory = responseData.result || [];
@@ -309,9 +314,14 @@
       btn.innerHTML = `Processing <i class="fa fa-spinner fa-spin"></i>`;
       btn.disabled = true;
       const requestOptions = {
-        method: 'post'
+        method: 'POST',
+        headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json',
+          'Authorization': 'Bearer ' + localStorage.getItem('token')
+        },
       }
-      fetch('https://psinventory-v2.onrender.com/admin/inventory/services/purchase/checkout?id=' + id, requestOptions)
+      fetch(api+'/admin/inventory/services/purchase/checkout?id=' + id, requestOptions)
         .then(response => response.json())
         .then(function (data) {
           if (data.error === true) {
