--- a/transaction-posting.html
+++ b/transaction-posting.html
@@ -392,7 +392,7 @@
         };
 
         try {
-          const response = await fetch('https://psinventory-v2.onrender.com/admin/inventory/transaction/get-list', requestOptions);
+          const response = await fetch(api + '/admin/inventory/transaction/get-list', requestOptions);
           if (!response.ok) {
             throw new Error(`HTTP error! Status: ${response.status}`);
           }
@@ -527,7 +527,7 @@
         btn.innerHTML = "Saving <i class='fa fa-spinner fa-spin'></i>"
         const memoData = getMemoData();
         const reqBody = {
-          posting_type : document.getElementById("posting_type").value,
+          posting_type: document.getElementById("posting_type").value,
           transactions: memoData
         }
         console.log(reqBody); // Log the retrieved data to the console
@@ -537,10 +537,11 @@
           headers: {
             'Accept': 'application/json',
             'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + localStorage.getItem('psitoken')
           },
           body: JSON.stringify(reqBody),
         }
-        fetch('https://psinventory-v2.onrender.com/admin/inventory/transaction/post', requestOptions)
+        fetch(api + '/admin/inventory/transaction/post', requestOptions)
           .then(response => response.json())
           .then(data => {
             console.log("purchase response:", data)
