--- a/login.html
+++ b/login.html
@@ -303,8 +303,8 @@
                 },
                 body: JSON.stringify(user),
             }
-            // const api = "https://psinventory-v2.onrender.com";
-            const api = "http://localhost:8080"; // Use this for local development
+            const api = "https://psinventory-v2.onrender.com";
+            // const api = "http://localhost:8080"; // Use this for local development
 
             fetch(`${api}/user/session/init`, requestOptions)
                 .then(response => response.json())
